fewer things addes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>First Website</title>
 </head>
 
 <body>
-    <h1>Hey Honey I'm using GitHub</h1>
-    <h3>How are you?</h3>
+    <h1><span class="text-highlight">Tanvir's</span></span> Portfolio</h1>
+
 </body>
 
 </html>
