added new design

--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
 </head>
 
 <body>
-    <h1><span class="text-highlight">Tanvir's</span></span> Portfolio</h1>
+    <section class="first-section">
+
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="text-highlight">Tanvir's</span></span> Portfolio</h1>
+            <h3>Professional Web Developer</h3>
+            <p>Looking for a challenging role in a reputable organization to utilize my technical, database, and
+                management
+                skills for the growth of the organization as well as to enhance my knowledge about new technologies and
+                emerging
+                trends.</p>
+        </div>
+        <div class="half-width"> <img class="first-photo" src="images/first.png" alt=""></div>
+
+    </section>
+
+
 
 </body>
 
