--- a/index.html
+++ b/index.html
@@ -22,9 +22,28 @@
                 skills for the growth of the organization as well as to enhance my knowledge about new technologies and
                 emerging
                 trends.</p>
+            <a class="hire-button" target="_blank" href="https://www.linkedin.com/in/tanveer-rifu-221265180/">HIRE
+                ME</a>
         </div>
-        <div class="half-width"> <img class="first-photo" src="images/first.png" alt=""></div>
+        <div class="half-width"> <img src="images/first.png" alt=""></div>
 
+    </section>
+    <section>
+        <div class="half-width">
+            <img src=" images/second-image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam aliquam et id quae, est minus.
+                Eligendi cupiditate ipsam velit, rem blanditiis quae culpa. Cupiditate aut totam hic, veritatis
+                optio dolore voluptates ipsam eum consequuntur suscipit minus, eos, reprehenderit incidunt. Vitae
+                sed similique a mollitia qui reiciendis odit veritatis iusto voluptas quia aliquid velit quisquam
+                corporis itaque laborum cum voluptate, quae earum. Inventore consequuntur dicta ab voluptatem eum
+                labore quo eveniet quaerat amet, distinctio quam aspernatur eaque suscipit nesciunt tempore vero,
+                illum commodi ex saepe quidem sequi! Voluptates officia porro at atque temporibus a vitae dolore,
+                autem magni vero voluptatem numquam?</p>
+        </div>
     </section>
 
 
