--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 labore quo eveniet quaerat amet, distinctio quam aspernatur eaque suscipit nesciunt tempore vero,
                 illum commodi ex saepe quidem sequi! Voluptates officia porro at atque temporibus a vitae dolore,
                 autem magni vero voluptatem numquam?</p>
+            <a target="_blank" class="hire-button"
+                href="https://drive.google.com/file/d/1R0OwXvB67tRDqtytyCBDg2kC6K4u5eHd/view?usp=sharing">DOWNLOAD
+                RESUME</a>
         </div>
     </section>
 
