--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <div class="half-width"> <img src="images/first.png" alt=""></div>
 
     </section>
-    <section>
+    <section class="dream-section">
         <div class="half-width">
-            <img src=" images/second-image.png" alt="">
+            <img src="images/second-image.png" alt="">
         </div>
-        <div class="half-width">
+        <div id="dream-text" class="half-width">
             <h2>Dream Big</h2>
             <h3>Become a web developer</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam aliquam et id quae, est minus.
@@ -47,6 +47,37 @@
                 href="https://drive.google.com/file/d/1R0OwXvB67tRDqtytyCBDg2kC6K4u5eHd/view?usp=sharing">DOWNLOAD
                 RESUME</a>
         </div>
+    </section>
+    <section class="experience-section">
+        <h1 class="exp-text">Experience</h1>
+        <div id="web-dev" class="half-width single-experience">
+            <h2>Web Developer</h2>
+            <h3 class="text-highlight">2020-Present|Intern Developer</h3>
+            <p class="experience-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod deserunt
+                blanditiis cum soluta ipsa
+                quidem
+                praesentium perferendis omnis, facilis beatae voluptatibus minus minima magni non quis aperiam ullam
+                amet similique? Ab nemo rerum minima consequatur sint, repellendus veritatis quis? Velit vitae
+                architecto distinctio debitis, quam quia quis placeat et necessitatibus.</p>
+        </div>
+        <div id="content-writer" class="half-width single-experience">
+            <h2>Content Writer</h2>
+            <h3 class="text-highlight">2016-Present|Experienced Content Writer</h3>
+            <p class="experience-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod deserunt
+                blanditiis cum soluta
+                ipsa
+                quidem
+                praesentium perferendis omnis, facilis beatae voluptatibus minus minima magni non quis aperiam
+                ullam
+                amet similique? Ab nemo rerum minima consequatur sint, repellendus veritatis quis? Velit vitae
+                architecto distinctio debitis, quam quia quis placeat et necessitatibus.</p>
+        </div>
+
+    </section>
+    <section class="footer-section">
+        <footer>
+            <h6>Copyright © 2010 by Tanvir Hasan</h6>
+        </footer>
     </section>
 
 
